bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: value || is not a member of Int
  if ((Math.abs(100-n) || Math.abs(200-n))<10){
                       ^